# governed-wastewater-review-queues

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/source/: README.md  repository_overview_editable.pptx  social_preview_editable.pptx
examples/: run_example.py  synthetic_candidates.csv
src/governed_queues/: __init__.py  core.py
tests/: test_core.py
