[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "governed-wastewater-review-queues"
version = "0.1.0"
description = "Auditable fixed-capacity review queues for wastewater surveillance"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Siqi Li" },
]
keywords = [
  "wastewater surveillance",
  "review queues",
  "evidence governance",
  "ranking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
